--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 DEBUG=backend:*
-MONGO_URI=
+MONGO_URI=mongodb+srv://mattpierson342:nIu0cPxS2HYeD8KU@cluster0.mxafjen.mongodb.net/?retryWrites=true&w=majority 
 SECRET_OR_KEY=zCVfFBF19WDbBA==
