--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 DEBUG=backend:*
 MONGO_URI=mongodb+srv://mattpierson342:nIu0cPxS2HYeD8KU@cluster0.mxafjen.mongodb.net/?retryWrites=true&w=majority 
 SECRET_OR_KEY=zCVfFBF19WDbBA==
+AWS_ACCESS_KEY_ID=AKIAQAFIBSL3VAFPK2HS
+AWS_SECRET_ACCESS_KEY=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
