--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "dotenv nodemon ./bin/www --inspect"
+    "dev": "dotenv nodemon ./bin/www --inspect",
+    "seed": "node seeders/seeds.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1395.0",
@@ -15,6 +16,8 @@
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fake": "^0.2.2",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "morgan": "~1.9.1",
