--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "aws-sdk": "^2.1395.0",
     "bootstrap": "^5.3.0",
     "multer": "^1.4.5-lts.1",
-    "react-bootstrap": "^2.7.4"
+    "react-bootstrap": "^2.7.4",
+    "react-h5-audio-player": "^3.8.6"
   }
 }
