--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-redux": "^8.0.7",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^2.1.3",
