upload img and aud for song

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "cSpell.words": [
         "audiofile",
         "bucketname",
+        "fieldname",
+        "imagefile",
+        "Middlewares",
         "reshares",
         "soundspace"
     ]
