--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@aws-sdk/client-s3": "^3.350.0",
     "aws-sdk": "^2.1395.0",
     "bootstrap": "^5.3.0",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "react-bootstrap": "^2.7.4",
     "react-h5-audio-player": "^3.8.6"
