fix usertracks and reposts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "fieldname",
         "imagefile",
         "Middlewares",
+        "Reposts",
         "reshares",
         "soundspace"
     ]
