css changes, add profilepage component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "bucketname",
         "fieldname",
         "imagefile",
+        "mainfeed",
         "Middlewares",
         "Reposts",
         "reshares",
