--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "imagefile",
         "mainfeed",
         "Middlewares",
+        "repost",
         "Reposts",
         "reshares",
         "soundspace"
