--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,10 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
+  "devServer": {
+    "historyApiFallback": true,
+    "hot": true
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
