--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "@aws-sdk/client-s3": "^3.350.0",
+    "@iconify/react": "^4.1.1",
     "aws-sdk": "^2.1395.0",
     "bootstrap": "^5.3.0",
+    "iconify": "^1.4.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "react-bootstrap": "^2.7.4",
