--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "bootstrap": "^5.3.0",
     "iconify": "^1.4.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "react-bootstrap": "^2.7.4",
     "react-h5-audio-player": "^3.8.6"
@@ -13,11 +15,9 @@
   "engines": {
     "node": "16.x"
   },
-  
   "name": "soundspace",
   "description": "<!-- Vincent -->",
   "version": "1.0.0",
-  "devDependencies": {},
   "scripts": {
     "backend-install": "npm install --prefix backend",
     "backend": "npm run dev --prefix backend",
