--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "engines": {
     "node": "16.x"
   },
-  
   "name": "soundspace",
   "description": "<!-- Vincent -->",
   "version": "1.0.0",
@@ -24,7 +23,8 @@
     "frontend-install": "npm install --prefix frontend",
     "frontend": "npm start --prefix frontend",
     "frontend-build": "npm run build --prefix frontend",
-    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build"
+    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build",
+    "start": "npm start --prefix frontend && node backend/bin/www.js"
   },
   "repository": {
     "type": "git",
