--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
   },
 
   "devServer": {
-    "public": "https://soundspace.onrender.com/"
+    "public": "https://soundspace.onrender.com/api/users/current"
   },
   
   "eslintConfig": {
