--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "React Template",
   "name": "Create React App Template",
-  "start_url": ".",
+  "start_url": "https://soundspace-iwq4.onrender.com/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
