--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@aws-sdk/client-s3": "^3.350.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@iconify/react": "^4.1.1",
     "aws-sdk": "^2.1395.0",
     "bootstrap": "^5.3.0",
