--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "0.0.0",
+  "homepage": ".",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
