--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "name": "soundspace",
   "description": "<!-- Vincent -->",
   "version": "1.0.0",
+  "homepage": ".",
   "scripts": {
     "backend-install": "npm install --prefix backend",
     "backend": "npm run dev --prefix backend",
@@ -35,6 +36,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mattpierson789/Soundspace/issues"
-  },
-  "homepage": "https://github.com/mattpierson789/Soundspace#readme"
+  }
 }
