--- a/package.json
+++ b/package.json
@@ -9,5 +9,32 @@
     "multer": "^1.4.5-lts.1",
     "react-bootstrap": "^2.7.4",
     "react-h5-audio-player": "^3.8.6"
-  }
+  },
+  "name": "soundspace",
+  "description": "<!-- Vincent -->",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "backend-install": "npm install --prefix backend",
+    "backend": "npm run dev --prefix backend",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "frontend-build": "npm run build --prefix frontend",
+    "build": "npm run backend-install && npm run frontend-install && npm run frontend-build"
+  },
+  "engines": {
+    "node": "16.20.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mattpierson789/Soundspace.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mattpierson789/Soundspace/issues"
+  },
+  "homepage": "https://github.com/mattpierson789/Soundspace#readme"
 }
