--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "react-bootstrap": "^2.7.4",
+    "react-epic-spinners": "^0.5.0",
     "react-h5-audio-player": "^3.8.6"
   },
   "name": "soundspace",
   "description": "<!-- Vincent -->",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "backend-install": "npm install --prefix backend",
     "backend": "npm run dev --prefix backend",
